--- a/assets/css/dds_car_search.css
+++ b/assets/css/dds_car_search.css
@@ -1,3 +1,11 @@
+select{
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-image: url(/wp-content/plugins/dds-tools/assets/images/select-d.png);
+    background-position: 96% 50%;
+    background-repeat: no-repeat;
+    background-size: 10px;
+}
 .dds_car_search_wrap_col{
     display:flex;
     max-width:300px;
@@ -8,10 +16,21 @@
     max-width:100%;
     margin:auto;
 }
+.dds_car_search_wrap_col select{
+    max-width: 350px;
+    min-width: 200px;
+    border: 1px solid #d4d4d4;
+    padding: 13px;
+    cursor:pointer;
+}
+
 .dds_car_search_wrap_row select{
     max-width: 350px;
     min-width: 200px;
-    margin:15px;
+    margin-right:15px;
+    border: 1px solid #d4d4d4;
+    padding: 13px;
+    cursor:pointer;
 }
 .dds_car_search_inner_col {
     width: 100%;
@@ -27,17 +46,12 @@
     justify-content: space-between;
     align-items: center;
 }
-.dds_car_search_inner select{
-    margin-bottom:20px;
-    border:1px solid rgb(201, 201, 201);
-    height:45px;
-}
 .dds_car_search_submit{
+    width: 60%;
+    min-width: 140px;
+    padding: 15px 0;
+    font-size: 19px;
     border:0px;
-    color:white;
-    height:50px;
-    width:150px;
-    height:38px;
 }
 
 .dds_car_search_submit:hover{
@@ -47,5 +61,11 @@
 @media only screen and (max-width: 650px) {
     .dds_car_search_inner_row{
         flex-direction: column;
+    }
+    .dds_car_search_inner_row select{
+        margin-bottom:20px;
+    }
+    .dds_car_search_inner_row button{
+        max-width: 250px;
     }
 }
