--- a/assets/css/dds_car_search.css
+++ b/assets/css/dds_car_search.css
@@ -22,6 +22,7 @@ select{
     border: 1px solid #d4d4d4;
     padding: 13px;
     cursor:pointer;
+    border:0 !important;
 }
 
 .dds_car_search_wrap_row select{
@@ -31,6 +32,7 @@ select{
     border: 1px solid #d4d4d4;
     padding: 13px;
     cursor:pointer;
+    border:0 !important;
 }
 .dds_car_search_inner_col {
     width: 100%;
