--- a/assets/css/dds_forms.css
+++ b/assets/css/dds_forms.css
@@ -1,5 +1,4 @@
 
-
 .dds_form {
     display: flex;
     flex-direction: row;
@@ -19,7 +18,7 @@
     font-size: 13px;
     width:100%;
 }
-.dds_form_modern input[type=text],.dds_form_modern input[type=email],.dds_form_modern input[type=email]{
+.dds_form_modern input[type=text],.dds_form_modern input[type=email],.dds_form_modern input[type=email],.dds_form_modern select{
   
     -webkit-font-smoothing: antialiased;
   
@@ -57,14 +56,41 @@
     font-size: 14px;
     width:100%;
 }
-.dds_form_classic input {
+.dds_form_classic input,.dds_form_classic select {
     font-size: 16px;
     margin-top: 7px;
     border: 1px solid #adadad !important;
     font-weight: 400;
-    padding: 11px;
+    padding: 0 10px;
     margin-bottom: 12px;
-    border-radius:4px;
+    border-radius: 4px;
+    height: 44px;
+}
+
+.dds_form_classic textarea {
+    height:170px;
+    margin-top: 10px !important;
+    margin-bottom: 10px !important;
+    min-height: 100px !important;
+    max-height: 300px !important;
+    min-width: 100%;
+    border: 1px solid #adadad !important;
+    font-weight: 400;
+    padding: 10px;
+    border-radius: 4px;
+}
+.dds_form_modern textarea {
+    height:170px;
+    margin-top: 10px !important;
+    margin-bottom: 10px !important;
+    min-height: 100px !important;
+    max-height: 300px !important;
+    min-width: 100%;
+    background-color: rgb(255, 255, 255);
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(221, 221, 221) !important;
+    box-shadow: rgb(0 0 0 / 16%) 0px 1px 2px 0px;
 }
 .dds_form .dds_form_submit{
     margin-top: 10px;
@@ -114,4 +140,95 @@
     height: 25px;
     position: absolute;
     left: 10px;
+}
+
+select{
+    color: #757575 !important;
+    cursor:pointer;
+}
+
+
+select:disabled {
+    cursor: not-allowed;
+    pointer-events: all !important;
+  }
+  div#dds_dropzone {
+    margin-top: 10px;
+    border: 2px dashed #dddddd;
+    border-radius: 5px;
+    background: white;
+    width: 100%;
+}
+.dropzone .dz-preview .dz-remove {
+    font-size: 14px;
+    text-align: center;
+    display: block;
+    cursor: pointer;
+    border: none;
+    width: 15px;
+    height: 15px;
+    font-weight: bold !important;
+    color: #585858;
+    position: absolute;
+    top: -5px;
+    right: -5px;
+    z-index: 9999 !important;
+    background: white;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 4px;
+    box-shadow: 0px 0px 3px #b5b5b5;
+}
+.dz-image-preview {
+    padding: 0 !important;
+    border: 1px solid #e8e8e8;
+    height: 30px !important;
+    border-radius: 5px;
+    /*overflow: hidden;*/
+    background: white;
+    margin-bottom: 25px !important;
+}
+.dropzone .dz-preview .dz-image{
+    border-radius: 5px !important; 
+    width: 69px;
+    height: 69px;
+}
+.dropzone .dz-preview {
+    min-height: 69px;
+    border-radius: 5px !important; 
+}
+
+.dz-error-message {
+    position: absolute;
+    top: 60px !important;
+    opacity: 1 !important;
+    z-index: 999999 !important;
+    padding: 5px !important;
+}
+.dropzone .dz-preview:hover .dz-image img{
+    -webkit-transform: scale(1.0, 1.0);
+    -moz-transform: scale(1.0, 1.0);
+    -ms-transform: scale(1.0, 1.0);
+    -o-transform: scale(1.0, 1.0);
+    transform: scale(1.0, 1.0);
+    -webkit-filter: blur(1px);
+    filter: blur(1px);
+}
+.dz-error-message span {
+font-size: 10px;
+
+}
+
+.dropzone .dz-preview {
+    margin: 5px;
+}
+.dropzone .dz-preview .dz-details .dz-size,.dropzone .dz-preview .dz-details{
+    margin-bottom: 0;
+    font-size: 9px;
+}
+div#dds_dropzone:hover {
+    transition: 0.7s;
+    background: #f9f9f9;
 }
