--- a/assets/css/dds_forms.css
+++ b/assets/css/dds_forms.css
@@ -61,7 +61,7 @@
     margin-top: 7px !important;
     border: 1px solid #adadad !important;
     font-weight: 400;
-    padding: 0 10px;
+    padding: 0 10px !important;
     margin-bottom: 12px !important;
     border-radius: 4px;
     height: 44px;
