--- a/assets/css/dds_forms.css
+++ b/assets/css/dds_forms.css
@@ -17,6 +17,7 @@
 .dds_form_modern label {
     font-size: 13px;
     width:100%;
+    margin-top: 15px;
 }
 .dds_form_modern input[type=text],.dds_form_modern input[type=email],.dds_form_modern input[type=email],.dds_form_modern select{
   
@@ -37,7 +38,6 @@
     margin-top: 7px;
     font-weight: 400;
     padding: 11px;
-    margin-bottom: 17px;
     border-radius:4px;
 
 }
@@ -233,4 +233,50 @@ font-size: 10px;
 div#dds_dropzone:hover {
     transition: 0.7s;
     background: #f9f9f9;
+}
+.select2-container--default .select2-results__option[aria-disabled=true] {
+    display: none;
+}
+.select2-container--default .select2-selection--single {
+    background-color: #fff;
+    border: 1px solid #aaa;
+    border-radius: 4px;
+    -webkit-font-smoothing: antialiased;
+    box-sizing: border-box;
+    height: 55px;
+    width: 100%;
+    color: rgb(45, 45, 45);
+    background-color: rgb(255, 255, 255);
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(221, 221, 221) !important;
+    box-shadow: rgb(0 0 0 / 16%) 0px 1px 2px 0px;
+    font-size: 16px;
+    margin-top: 7px;
+    font-weight: 400;
+    padding: 11px;
+    padding-bottom: 17px;
+    border-radius: 4px;
+}
+.select2-container--default .select2-selection--single .select2-selection__arrow {
+    height: 65px;
+    position: absolute;
+    top: 1px;
+    right: 10px;
+    width: 20px;
+}
+.select2-container .select2-selection--single .select2-selection__rendered {
+     padding-left: 0;
+}
+.select2-container--default .select2-selection--single .select2-selection__arrow b {
+    border-color: #888 transparent transparent transparent;
+    border-style: solid;
+    border-width: 6px 5px 0 5px;
+    height: 0;
+    left: 50%;
+    margin-left: -6px;
+    margin-top: -2px;
+    position: absolute;
+    top: 50%;
+    width: 0;
 }
