--- a/assets/css/dds_forms.css
+++ b/assets/css/dds_forms.css
@@ -237,7 +237,7 @@ div#dds_dropzone:hover {
 .select2-container--default .select2-results__option[aria-disabled=true] {
     display: none;
 }
-.select2-container--default .select2-selection--single {
+.dds_form_modern .select2-container--default .select2-selection--single {
     background-color: #fff;
     border: 1px solid #aaa;
     border-radius: 4px;
@@ -249,7 +249,7 @@ div#dds_dropzone:hover {
     background-color: rgb(255, 255, 255);
     border-width: 1px;
     border-style: solid;
-    border-color: rgb(221, 221, 221) !important;
+    border-color:rgb(221, 221, 221) !important;
     box-shadow: rgb(0 0 0 / 16%) 0px 1px 2px 0px;
     font-size: 16px;
     margin-top: 7px;
@@ -258,17 +258,17 @@ div#dds_dropzone:hover {
     padding-bottom: 17px;
     border-radius: 4px;
 }
-.select2-container--default .select2-selection--single .select2-selection__arrow {
+.dds_form_modern .select2-container--default .select2-selection--single .select2-selection__arrow {
     height: 65px;
     position: absolute;
     top: 1px;
     right: 10px;
     width: 20px;
 }
-.select2-container .select2-selection--single .select2-selection__rendered {
+.dds_form_modern .select2-container .select2-selection--single .select2-selection__rendered {
      padding-left: 0;
 }
-.select2-container--default .select2-selection--single .select2-selection__arrow b {
+.dds_form_modern .select2-container--default .select2-selection--single .select2-selection__arrow b {
     border-color: #888 transparent transparent transparent;
     border-style: solid;
     border-width: 6px 5px 0 5px;
@@ -280,3 +280,51 @@ div#dds_dropzone:hover {
     top: 50%;
     width: 0;
 }
+
+.select2-container--default .select2-results__option[aria-disabled=true] {
+    display: none;
+}
+.dds_form_classic .select2-container--default .select2-selection--single {
+    background-color: #fff;
+    border: 1px solid #aaa;
+    border-radius: 4px;
+    -webkit-font-smoothing: antialiased;
+    box-sizing: border-box;
+    height: 44px;
+
+    width: 100%;
+    color: rgb(45, 45, 45);
+    background-color: rgb(255, 255, 255);
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(176 176 176) !important;
+    font-size: 16px;
+    margin-top: 7px;
+    font-weight: 400;
+    padding-bottom: 17px;
+    border-radius: 4px;
+ padding: 7px 10px 0;
+ margin-bottom: 10px;
+
+}
+.dds_form_classic .select2-container--default .select2-selection--single .select2-selection__arrow {
+    height: 65px;
+    position: absolute;
+    top: 1px;
+    right: 10px;
+    width: 20px;
+}
+.dds_form_classic .select2-container .select2-selection--single .select2-selection__rendered {
+     padding-left: 0;
+}
+.dds_form_classic .select2-container--default .select2-selection--single .select2-selection__arrow b {
+    border-color: #888 transparent transparent transparent;
+    border-style: solid;
+    border-width: 6px 5px 0 5px;
+    height: 0;
+    left: 50%;
+    margin-left: -6px;
+    margin-top: -2px;
+    position: absolute;
+    top: 50%;
+    width: 0;
