--- a/assets/css/dds_forms.css
+++ b/assets/css/dds_forms.css
@@ -12,6 +12,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
+    margin-bottom: 20px;
 }
 
 .dds_form_modern label {
@@ -39,8 +40,6 @@
     padding: 11px;
     border-radius:4px;
 
-    margin-top: 10px;
-    margin-bottom: 15px;
 
 }
 .dds_form_modern .dds_form_submit{
@@ -60,11 +59,9 @@
 }
 .dds_form_classic input,.dds_form_classic select {
     font-size: 16px;
-    margin-top: 7px !important;
     border: 1px solid #adadad !important;
     font-weight: 400;
     padding: 0 10px !important;
-    margin-bottom: 12px !important;
     border-radius: 4px;
     height: 44px;
     width: 100%;
@@ -259,7 +256,6 @@ div#dds_dropzone:hover {
     padding: 11px;
     padding-bottom: 17px;
     border-radius: 4px;
-    margin-bottom: 15px;
 }
 .dds_form_modern .select2-container--default .select2-selection--single .select2-selection__arrow {
     height: 65px;
@@ -332,9 +328,7 @@ div#dds_dropzone:hover {
     top: 50%;
     width: 0;
 }
-.select2-dropdown {
-    margin-top: -10px;
-}
+
 .dds_form_classic .select2-container--default .select2-selection--single .select2-selection__arrow {
   
     top: -4px;
@@ -343,13 +337,16 @@ div#dds_dropzone:hover {
     border-color: #1694CA;
     box-shadow: inset 0 1px 3px rgb(0 0 0 / 6%), 0 0 5px rgb(19 131 179 / 70%);
 }
-.select2-dropdown {
-    margin-top: -50px;
-}
+
 
 .select2-container--open .select2-dropdown--above {
     margin-top: 8px;
 }
 .select2-selection--single[aria-disabled="true"]{
     cursor:not-allowed !important;
+}
+
+.dds_form_loading{
+    opacity:0.7;
+    pointer:cursor;
 }
