--- a/assets/css/dds_forms.css
+++ b/assets/css/dds_forms.css
@@ -350,3 +350,7 @@ div#dds_dropzone:hover {
     opacity:0.7;
     pointer:cursor;
 }
+.select2-container--open .select2-dropdown--below {
+
+    margin-top: -50px;
+}
