--- a/assets/css/dds_forms.css
+++ b/assets/css/dds_forms.css
@@ -331,6 +331,7 @@ font-size: 10px;
     border: 0px solid !important;
     padding:0 !important;
     height: 40px;
+    font-size: 18px !important;
 }
 .select2-search--dropdown {
     display: block;
