--- a/assets/css/dds_forms.css
+++ b/assets/css/dds_forms.css
@@ -40,7 +40,15 @@
 
 
 
-
+.dds_form_classic textarea {
+    width: 100%;
+    padding: 10px;
+    border-radius: 4px;
+    min-height: 150px;
+    border:1px solid #E0E0E0;
+    margin-bottom: 10px;
+    font-size: 16px;
+}
 .dds_form {
     display: flex;
     flex-direction: row;
