--- a/assets/css/dds_forms.css
+++ b/assets/css/dds_forms.css
@@ -339,6 +339,7 @@ font-size: 10px;
     padding:0 !important;
     height: 40px;
     font-size: 16px !important;
+    outline: 0 !important;
 }
 .select2-search--dropdown {
     display: block;
