--- a/assets/css/dds_forms.css
+++ b/assets/css/dds_forms.css
@@ -45,7 +45,7 @@
     padding: 10px;
     border-radius: 4px;
     min-height: 150px;
-    border:1px solid #E0E0E0;
+       border: 1px solid #adadad !important;
     margin-bottom: 10px;
     font-size: 16px;
 }
