--- a/assets/css/dds_car_search.css
+++ b/assets/css/dds_car_search.css
@@ -1,7 +1,7 @@
 select{
     -webkit-appearance: none;
     -moz-appearance: none;
-    background-image: url(/wp-content/plugins/dds-tools/assets/images/select-d.png);
+    background-image: url(https://digiflowroot.be/static/images//select-d.png);
     background-position: 96% 50%;
     background-repeat: no-repeat;
     background-size: 10px;
