--- a/assets/css/dds_forms.css
+++ b/assets/css/dds_forms.css
@@ -33,9 +33,10 @@
     border: 1px solid #adadad !important;
     font-weight: 400;
     padding: 0 10px !important;
-    border-radius: 4px;
-    height: 44px;
+    border-radius: 4px !important;
+    height: 44px !important;
     width: 100%;
+    background: white !important;
 }
 
 
