--- a/assets/css/dds_forms.css
+++ b/assets/css/dds_forms.css
@@ -8,40 +8,41 @@
 }
 .dds_form_modern input[type=text],.dds_form_modern input[type=email],.dds_form_modern input[type=email],.dds_form_modern select{
   
-    -webkit-font-smoothing: antialiased;
+    width: 100% !important;
+    padding: 10px;
+    outline: 0;
+    border: 0;
+    box-shadow: rgb(45 45 45 / 16%) 0px 1px 2px 0px, rgb(238 238 238) 0px 0px 0px 1px;
+    border-radius: 5px;
   
-    box-sizing: border-box;
-    height: 55px;
-    width: 100%;
-    color: rgb(45, 45, 45);
-    background-color: rgb(255, 255, 255);
-    border-width: 1px;
-    border-style: solid;
-    border-color: rgb(221, 221, 221) !important;
-    
-    box-shadow: rgb(0 0 0 / 16%) 0px 1px 2px 0px;
-
-    font-size: 16px;
-    font-weight: 400;
-    padding: 11px;
-    border-radius:4px;
-
 
 }
+.dds_form_modern textarea {
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
+    min-height: 150px;
+    border: 0;
+    box-shadow: rgb(45 45 45 / 16%) 0px 1px 2px 0px, rgb(238 238 238) 0px 0px 0px 1px;
+    margin-bottom: 10px;
+    font-size: 16px;
+    max-height: 250px;
+}
 .dds_form_classic input,.dds_form_classic select {
+    
     font-size: 16px;
     border: 1px solid #adadad !important;
     font-weight: 400;
     padding: 0 10px !important;
     border-radius: 4px !important;
     height: 44px !important;
-    width: 100%;
+    width: 100% !important;
     background: white !important;
 }
 
 
 
-.dds_form textarea {
+.dds_form_classic textarea {
     width: 100%;
     padding: 10px;
     border-radius: 4px;
@@ -49,6 +50,7 @@
        border: 1px solid #adadad !important;
     margin-bottom: 10px;
     font-size: 16px;
+    max-height: 250px;
 }
 .dds_form {
     display: flex;
@@ -225,24 +227,16 @@ font-size: 10px;
     display: none;
 }
 .dds_form_modern .select2-container--default .select2-selection--single {
-    background-color: #fff;
-    border: 1px solid #aaa;
-    border-radius: 4px;
-    -webkit-font-smoothing: antialiased;
-    box-sizing: border-box;
-    height: 55px;
-    width: 100%;
-    color: rgb(45, 45, 45);
-    background-color: rgb(255, 255, 255);
-    border-width: 1px;
-    border-style: solid;
-    border-color:rgb(221, 221, 221) !important;
-    box-shadow: rgb(0 0 0 / 16%) 0px 1px 2px 0px;
-    font-size: 16px;
-    font-weight: 400;
-    padding: 11px;
-    padding-bottom: 17px;
-    border-radius: 4px;
+    padding: 0 10px;
+    outline: 0;
+    border: 0;
+    box-shadow: rgb(45 45 45 / 16%) 0px 1px 2px 0px, rgb(238 238 238) 0px 0px 0px 1px;
+    border-radius: 5px;
+    width:100%;
+    height: 44px;
+    display: flex;
+    align-items: center;
+    background: white;
 }
 .dds_form_modern .select2-container--default .select2-selection--single .select2-selection__arrow {
     height: 65px;
@@ -318,7 +312,7 @@ font-size: 10px;
     top: 14px;
 }
 .dds_form_modern .select2-selection__arrow {
-    top: -5px !important;
+    top: -11px !important;
 }
 
 
@@ -347,8 +341,9 @@ font-size: 10px;
     padding: 0px 10px;
 }
 span.select2-dropdown.select2-dropdown--below {
-    margin-top: -43px !important;
+    margin-top: -45px !important;
     border-radius: 4px !important;
+    border:1px solid #adadad;
 }
 .select2-search::after{
   content: '';
