--- a/assets/css/dds_forms.css
+++ b/assets/css/dds_forms.css
@@ -58,7 +58,6 @@
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
-    max-width: 700px;
 }
 
 
@@ -381,3 +380,12 @@ strong.select2-results__group {
     color: #a0a0a0;
 }
 
+.dds_form .dds_input_group{
+    width: 100% !important;
+}
+
+@media only screen and (max-width: 600px) {
+    .dds_form .dds_input_group{
+        width: 100% !important;
+    }
+}
