car search uitgebreid met brandstof + fixes

--- a/assets/css/dds_car_search.css
+++ b/assets/css/dds_car_search.css
@@ -58,7 +58,55 @@ select{
 .dds_car_search_submit:hover{
     transition: 0.4s;
 }
+.dds_car_search_form .select2-container--default .select2-selection--single {
+    background-color: #fff;
+    border: 1px solid #aaa;
+    border-radius: 4px;
+    -webkit-font-smoothing: antialiased;
+    box-sizing: border-box;
+    height: 44px;
 
+    width: 100%;
+    color: rgb(45, 45, 45);
+    background-color: rgb(255, 255, 255);
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(176 176 176) !important;
+    font-size: 16px;
+    font-weight: 400;
+    padding-bottom: 17px;
+    border-radius: 4px;
+    padding: 7px 10px 0;
+
+}
+
+
+.dds_car_search_form .select2-container--default .select2-selection--single .select2-selection__arrow {
+    height: 15px;
+    position: absolute;
+    right: 10px;
+    width: 20px;
+}
+.dds_car_search_form .select2-container .select2-selection--single .select2-selection__rendered {
+     padding-left: 0;
+}
+.dds_car_search_form .select2-container--default .select2-selection--single .select2-selection__arrow b {
+    border-color: #888 transparent transparent transparent;
+    border-style: solid;
+    border-width: 6px 5px 0 5px;
+    height: 0;
+    left: 50%;
+    margin-left: -6px;
+    margin-top: -3px;
+    position: absolute;
+    top: 50%;
+    width: 0;
+}
+
+.dds_car_search_form .select2-container--default .select2-selection--single .select2-selection__arrow {
+  
+    top: 14px;
+}
 @media only screen and (max-width: 650px) {
     .dds_car_search_inner_row{
         flex-direction: column;
