--- a/assets/css/dds_wizard.css
+++ b/assets/css/dds_wizard.css
@@ -7,7 +7,6 @@
 {
     display: block;
     width: 100%;
-    overflow: hidden;
 }
 
 .wizard a,
@@ -58,7 +57,7 @@
     text-align: center;
     margin: auto;
     z-index: 10;
-    bottom: 50px;
+    bottom: -50px;
     max-width: 50%;
     left: 41%;
 }
@@ -150,15 +149,14 @@
 {
     display: block;
     margin: 0;
-    min-height: 35em;
-    overflow: hidden;
     position: relative;
     width: 100%;
-
+    height:500px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;
 }
+
 
 .wizard.vertical > .content
 {
@@ -440,4 +438,51 @@ cursor:pointer;
 
 #ddswizard select{
     margin: 0 10px;
+}
+.selectwrap{
+    width: 220px;
+    display: block;margin:0 10px;
+}
+
+.selectparent{
+    display:flex;
+}
+@media only screen and (max-width:880px) {
+  .selectparent{
+    flex-direction:column;
+}
+#ddswizard h2 {
+    width: 100%;
+    font-size: 20px;
+
+}
+#ddswizard p {
+    text-align: center;
+    font-size: 14px;
+}
+.optieswrap {
+    justify-content: space-around;
+}
+.singleoptiewrap {
+    width: 150px;
+    height: 150px;
+    margin: 5px 0;
+}
+.wizard > .steps {
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100px;
+}
+.wizard > .steps a, .wizard > .steps a:hover, .wizard > .steps a:active{
+    padding: 0.5em 0.5em;
+}
+.dds_form .dds_form_submit{
+    width:100%;
+}
+.wizard > .content > .body {
+    width: 100%;
+    height: 100%;
+}
 }
