--- a/assets/css/dds_wizard.css
+++ b/assets/css/dds_wizard.css
@@ -57,7 +57,7 @@
     text-align: center;
     margin: auto;
     z-index: 10;
-    bottom: -50px;
+    bottom: -10px;
     max-width: 50%;
     left: 41%;
 }
@@ -77,7 +77,7 @@
 
 .wizard > .steps > ul > li
 {
-    width: 25%;
+    width: 50px;
 }
 
 .wizard > .steps > ul > li,
@@ -151,7 +151,8 @@
     margin: 0;
     position: relative;
     width: 100%;
-    height:500px;
+    height:70vh;
+    max-height:800px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;
@@ -448,6 +449,9 @@ cursor:pointer;
     display:flex;
 }
 @media only screen and (max-width:880px) {
+    .wizard > .steps > ul > li {
+        width: 20px;
+    }
   .selectparent{
     flex-direction:column;
 }
@@ -473,7 +477,7 @@ cursor:pointer;
     right: 0;
     margin-left: auto;
     margin-right: auto;
-    width: 100px;
+    width: 120px;
 }
 .wizard > .steps a, .wizard > .steps a:hover, .wizard > .steps a:active{
     padding: 0.5em 0.5em;
