--- a/assets/css/dds_wizard.css
+++ b/assets/css/dds_wizard.css
@@ -21,6 +21,10 @@
     list-style: none !important;
     padding: 0;
     margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 .wizard ul > li,
@@ -52,14 +56,16 @@
 */
 
 .wizard > .steps {
+   
     position: absolute;
-    display: block;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    bottom: 0; 
+    width: 400px; 
     text-align: center;
-    margin: auto;
     z-index: 10;
-    bottom: -10px;
-    max-width: 50%;
-    left: 41%;
 }
 
 .wizard.vertical > .steps
